--- a/CuHacks/package.json
+++ b/CuHacks/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.76.7",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2"
+    "react-native-screens": "^4.9.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
