--- a/CuHacks/package.json
+++ b/CuHacks/package.json
@@ -14,6 +14,7 @@
     "expo": "~52.0.38",
     "expo-location": "^18.0.8",
     "expo-status-bar": "~2.0.1",
+    "geolib": "^3.3.4",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-maps": "^1.20.1",
