--- a/CuHacks/server/package.json
+++ b/CuHacks/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "geolib": "^3.3.4",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
