--- a/CuHacks/package.json
+++ b/CuHacks/package.json
@@ -21,6 +21,7 @@
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-vector-icons": "^10.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
