--- a/CuHacks/package.json
+++ b/CuHacks/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
@@ -19,6 +21,7 @@
     "geolib": "^3.3.4",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
